# INF147-H2024-TP1

./: CMakeLists.txt  configuration.h  main.c  test.c
TP1-Decodeur/: CMakeLists.txt  README.md  configuration.h  main.c  test.c
TP1-Decodeur/decodeur/: a429.c  a429.h  utilitaire.c
decodeur/: a429.c  a429.h  utilitaire.c  utilitaire.h
